--- a/Kitodo/src/main/webapp/pages/projectEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEdit.xhtml
@@ -30,7 +30,7 @@
         <h3>
             <h:outputText value="#{msgs.projectEdit} (#{ProjekteForm.myProjekt.title})" rendered="#{not empty ProjekteForm.myProjekt.title}"/>
             <h:outputText value="#{msgs.newProject}" rendered="#{empty ProjekteForm.myProjekt.folders}"/>
-            <h:outputText value="#{msgs.duplicateProject}" rendered="#{empty ProjekteForm.myProjekt.title and not empty ProjekteForm.myProjekt.projectFileGroups}"/>
+            <h:outputText value="#{msgs.duplicateProject}" rendered="#{empty ProjekteForm.myProjekt.title and not empty ProjekteForm.myProjekt.folders}"/>
         </h3>
         <p:commandButton id="save"
                          widgetVar="save"
