Fix Rebase conflicts.

--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -137,7 +137,7 @@
         </p:dialog>
     </ui:define>
     <ui:define name="breadcrumbs">
-            <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+            <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
             <li><h:link value="#{msgs.processes}" outcome="processes"/></li>
             <li><a href="">#{msgs.metadataEdit} (#{Metadaten.process.title})</a></li>
     </ui:define>
