--- a/Kitodo/src/main/webapp/pages/templateEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/templateEdit.xhtml
@@ -50,7 +50,7 @@
     </ui:define>
 
     <ui:define name="pageTabView">
-        <p:tabView id="tabs" cache="false">
+        <p:tabView id="templateTabView" cache="false">
             <p:tab title="#{msgs.templateDetails}" id="details">
                 <ui:include src="/WEB-INF/templates/includes/templateEdit/details.xhtml"/>
             </p:tab>
