Update list of projects with list of templates

--- a/Kitodo/src/main/webapp/pages/projects.xhtml
+++ b/Kitodo/src/main/webapp/pages/projects.xhtml
@@ -49,7 +49,7 @@
             <p:tab title="#{msgs.projectList}" id="projectTab">
                 <ui:include src="/WEB-INF/templates/includes/projects/projectList.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.prozessvorlagen}" id="templateTab">
+            <p:tab title="#{msgs.templates}" id="templateTab">
                 <ui:include src="/WEB-INF/templates/includes/projects/templateList.xhtml"/>
             </p:tab>
             <p:tab title="#{msgs.workflows}" id="workflowTab">
